removed strange URL. Small changes in toDo.tex

--- a/toDo.tex
+++ b/toDo.tex
@@ -75,8 +75,12 @@
   \textit{p}~8 (\textit{l}~25).  Reflection often means run-time
   introspection (for instance the Java \Verb!.getClass()! method).
   In computer science, reflection is the ability of a computer program to examine (see type introspection) and modify its own structure and behavior (specifically the values, meta-data, properties and functions) at runtime.
-  http://www2.parc.com/csl/groups/sda/projects/reflection96/docs/malenfant/malenfant.pdf 
   
+\item
+  Supply your credentials in the front material (what degrees do you
+  have?).
+  (Search for \Verb!%% Supply your credentials! in \Verb!proposal1.tex!\,.)
+
 \item [\textbf{David}]
 \item Review Chapter 1
 \item Review Chapter 2
