Small changes in toDo.tex

--- a/toDo.tex
+++ b/toDo.tex
@@ -76,6 +76,11 @@
   introspection (for instance the Java \Verb!.getClass()! method).
   In computer science, reflection is the ability of a computer program to examine (see type introspection) and modify its own structure and behavior (specifically the values, meta-data, properties and functions) at runtime.
   
+\item
+  Supply your credentials in the front material (what degrees do you
+  have?).
+  (Search for \Verb!%% Supply your credentials! in \Verb!proposal1.tex!\,.)
+
 \item [\textbf{David}]
 \item Clean up the non-exclusive license page in unbcthesis.cls
 \item Incorporate unbcthesis.cls into Mehul's work.
