Moved section levels up one: that is, \section becomes \chapter, \subsection becomes \section.
dropped \paragraph{}'s.

--- a/background.tex
+++ b/background.tex
@@ -7,10 +7,9 @@
 \begin{document}
 
 %----------------------------------------------------------------------------
-\section{Background}\label{sect:background}
+\chapter{Background}\label{chap:background}
 %----------------------------------------------------------------------------
 
-\paragraph{} 
 Programming Languages fall into different categories also known as "paradigms". They exhibit different 
 characteristics according to the paradigm they fall into. It has been argued 
 \cite{Krishnamurthi:2008:TPL:1480828.1480846} that rather than classifying a language into a particular paradigm, it 
