--- a/embedding.tex
+++ b/embedding.tex
@@ -3,9 +3,8 @@
 
 \begin{document}
 
-\section{Embedding a Programming Language into another Programming Language }\label{sect:embedding}
+\chapter{Embedding a Programming Language into another Programming Language }\label{chap:embedding}
 
-\paragraph{} 
 The art of embedding a programming language into another one has been explored a number of times in the form 
 of building libraries or developing Foreign Function Interfaces and so on. This area mainly aims at an environment 
 and setting where two or more languages can work with each other harmoniously with each one able to play a part 
@@ -15,9 +14,8 @@ general.
 %Embedding a programming language into another, in this we talk about embedding Prolog in Haskell.
 %The following are the sources or related work that can be found,
 
-\subsection{The Informal Content from Blogs, Articles and Internet Discussions}
+\section{The Informal Content from Blogs, Articles and Internet Discussions}
 
-\paragraph{} 
 Before moving on to the formal content such as publications, modules and libraries it is time to get \textit{street 
 smart}. This subsection takes a look at the information, thoughts and discussions that are currently taking place 
 from time to time on the internet. A lot of interesting content is generated which has often led to some formal 
@@ -80,9 +78,8 @@ encoding of search problems.
 	\end{enumerate}	
 	\end{comment}
 	
-\subsection{Related Books}
+\section{Related Books}
 
-\paragraph{} 
 As \progLang{Haskell} is relatively new in terms of being popular, its predecessors like \progLang{Scheme} have 
 explored the territory of embedding  quite profoundly \cite{friedman05reasoned}, which aims at adding a few 
 constructs to the language to bring together both styles of Declarative Programming and capture the essence of 
@@ -104,9 +101,8 @@ All the more \textit{Prologish} things exist in Haskell, as mentioned alone it i
 \end{enumerate}
 \end{comment}
 
-\subsection{Related Papers}
+\section{Related Papers}
 
-\paragraph{} 
 There is quite some literature that can be found and which consist of embedding detailed parts of Prolog features 
 like basic constructs, search strategies and data types. One of the major works is covered by the subsection below 
 consisting of a series of papers from Mike Spivey and Silvija Seres aimed at bring Haskell and Prolog closer to each 
@@ -424,7 +420,7 @@ Type System helps
 \end{description}	
 	
 	
-\subsection{Related Libraries in Haskell}
+\section{Related Libraries in Haskell}
 \begin{description}
 \item[$\bullet$]Prolog Libraries
 
@@ -491,7 +487,7 @@ Another important aspect of \progLang{Prolog} is backtracking. To simulate it in
 \end{description}
 
 \begin{comment}
-\subsection{Possibly Related Content}
+\section{Possibly Related Content}
 \begin{enumerate}
 
 \item Unifying Theories of Programming, C.A.R. Hoare,
