--- a/eplipl.tex
+++ b/eplipl.tex
@@ -5,7 +5,7 @@
 \begin{document}
 
 %-----------------------------------------------------------------------------
-\section{Embedding a Programming Language into another Programming Language}\label{sect:eplipl}
+\chapter{Embedding a Programming Language into another Programming Language}\label{chap:eplipl}
 %-----------------------------------------------------------------------------
 Embedding a language into another language has been explored with a variety of languages. Attempts have been made to build Domain Specific Languages from the host languages \cite{hudak1996building}, Foriegn Function Interfaces \cite{barzilay2004foreign} 
 
@@ -50,7 +50,7 @@ The above can be described as concrete syntax for the "new" language and can be 
 
 As discussed in the 
 
-\subsection{Theory}
+\section{Theory}
 \begin{enumerate}
 %------------------------------------------------------------------------------------------------------------------------------------
 \item Papers
@@ -85,17 +85,17 @@ As discussed in the
 %------------------------------------------------------------------------------------------------------------------------------------
 \end{enumerate}
 
-\subsection{Implementations}
+\section{Implementations}
 \begin{enumerate}
 \item Lots of them I guess
 \end{enumerate}
 
-\subsection{Important People}
+\section{Important People}
 \begin{enumerate}
 \item ????
 \end{enumerate}
 
-\subsection{Miscellaneous / Possibly Related Content}
+\section{Miscellaneous / Possibly Related Content}
 \begin{enumerate}
 \item ????
 \end{enumerate}
