--- a/introduction.tex
+++ b/introduction.tex
@@ -4,10 +4,9 @@
 
 \begin{document}
 %----------------------------------------------------------------------------
-\section{Introduction}\label{sect:introduction}
+\chapter{Introduction}\label{chap:introduction}
 %----------------------------------------------------------------------------
-\subsection{Beginnings}
-\paragraph{}
+\section{Beginnings}
 Computers have become a part of everyone's life. From the ones in our pockets to the ones on desks or in our school bags, working or in fact living without 
 them is difficult if not impossible. All the more reason to know how to use one. Simply speaking just using a computer these days is not enough. To be able 
 to utilise their true potential, one must go deeper and communicate with them. This is where the art of programming steps in.     
@@ -22,18 +21,17 @@ while the latter is based on Horn Clause Logic. Each of them has its own advanta
 one does not need to choose! This document looks at the attempts, improvements and future possibilities of uniting \progLang{Haskell}, a Purely 
 Functional Programming Language and \progLang{Prolog}, a Logical Programming Language so that one is not forced to choose.
 
-\subsection{Thesis Statement}
-\paragraph{} 
+\section{Thesis Statement}
+
 The thesis aims to provide insights into merging two declarative languages namely, \progLang{Haskell} and \progLang{Prolog} by embedding 
 the latter into the former and analysing the result of doing so as they have conflicting characteristics. The finished product will be 
 something like a \textit{haskellised} \progLang{Prolog} which has logical programming like capabilities.       
 
 
 %----------------------------------------------------------------------------
-\subsection{Problem Statement}
+\section{Problem Statement}
 %----------------------------------------------------------------------------
 
-\paragraph{}
 Over the years the development of programming languages has become more and more rapid. Today the number of is in the thousands and counting. The 
 successors attempt to introduce new concepts and features to simplify the process of coding a solution and assist the programmer by lessening the 
 burden of carrying out standard tasks and procedures. A new one tries to capture the best of the old; learn from the mistakes, add new concepts and 
@@ -95,14 +93,14 @@ The above will result in a set of characteristics which are from both the declar
 %language can provide.
 This can be achieved in two ways,
 \begin{description}
-\item [Embedding (\chapterReference{sect:embedding}{Chapter 4}):]
+\item [Embedding (\chapterReference{chap:embedding}{Chapter 4}):]
 
 \par This approach involves, translating a complete language into the host language as an extension such as a library and/ or module . The result is very 
 shallow as all the positives as well as the negatives are brought into the host language. The negatives mentioned being, that languages from different 
 paradigms usually have conflicting characteristics and result in inconsistent properties of the resulting embedding. Examples and further discussion on 
 the same is provided in the chapters to come.  
 
-\item [Paradigm Integration (\chapterReference{sect:multiparadigm}{Chapter 5}):]
+\item [Paradigm Integration (\chapterReference{chap:multiparadigm}{Chapter 5}):]
 
 \par This approach goes much deeper as it does not involve a direct translation. An attempt is made by taking a particular characteristic of a language 
 and merging it with the characteristic of the host language in order to eliminate conflicts resulting in a multi paradigm language. It is more of weaving 
@@ -111,30 +109,29 @@ the two languages into one tight package with the best of both and maybe even th
 
 
 %----------------------------------------------------------------------------
-%\subsection{Research Approach and Contributions}
+%\section{Research Approach and Contributions}
 %----------------------------------------------------------------------------
 %
 
 
 
-%\subsubsection{Contributions}
+%\subsection{Contributions}
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
 
 
 %----------------------------------------------------------------------------
-\subsection{Proposal Organization}
+\section{Proposal Organization}
 
-\paragraph{}
-The next chapter, \chapterReference{sect:proposedWork}{Chapter 2} provides details about the short comings of the previous works and the road to a 
-better future. \chapterReference{sect:background}{Chapter 3}, the background talks about the programming paradigms and languages in general and 
-the ones in question. Then we look at the question from different angles namely, \chapterReference{sect:embedding}{Chapter 4},  Embedding a 
-Programming Language into another Programming Language and  \chapterReference{sect:embedding}{Chapter 5}, Multi Paradigm Languages (
-Functional Logic Languages). Some of the indirectly related content \chapterReference{sect:relatedWork}{Chapter 6} and finishing off with the 
-\chapterReference{sect:conclusion}{Chapter 7}, the expected outcomes.     
+The next chapter, \chapterReference{chap:proposedWork}{Chapter 2} provides details about the short comings of the previous works and the road to a 
+better future. \chapterReference{chap:background}{Chapter 3}, the background talks about the programming paradigms and languages in general and 
+the ones in question. Then we look at the question from different angles namely, \chapterReference{chap:embedding}{Chapter 4},  Embedding a 
+Programming Language into another Programming Language and  \chapterReference{chap:embedding}{Chapter 5}, Multi Paradigm Languages (
+Functional Logic Languages). Some of the indirectly related content \chapterReference{chap:relatedWork}{Chapter 6} and finishing off with the 
+\chapterReference{chap:conclusion}{Chapter 7}, the expected outcomes.     
 
-%\subsection{The Plan}
+%\section{The Plan}
 
 
 
