--- a/metasyntacticvariables.tex
+++ b/metasyntacticvariables.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 
-\section{Meta Syntactic Variables}\label{sect:metasyntacticvariables}
+\chapter{Meta Syntactic Variables}\label{chap:metasyntacticvariables}
 
 Some sources for the topic 
 \url{https://en.wikipedia.org/wiki/Metasyntactic_variable}
