--- a/miscrelcon.tex
+++ b/miscrelcon.tex
@@ -4,7 +4,7 @@
 \begin{document}
 
 % ---------------------------------------------------------------------------
-\section{Miscellaneous or Possibly Related Content}\label{sect:miscrelcon}
+\chapter{Miscellaneous or Possibly Related Content}\label{chap:miscrelcon}
 % ---------------------------------------------------------------------------
 
 Miscellaneous / Possibly Related Content
