--- a/prologin.tex
+++ b/prologin.tex
@@ -3,11 +3,11 @@
 \begin{document}
 
 %-----------------------------------------------------------------------------
-\section{Prolog in \_\_\_\_ }\label{sect:prologin}
+\chapter{Prolog in \_\_\_\_ }\label{chap:prologin}
 %-----------------------------------------------------------------------------
 
 Prolog in \_\_\_\_\_\_
-\subsection{Theory}
+\section{Theory}
 \begin{description}
 
 \item[$\bullet$] Papers
@@ -35,7 +35,7 @@ Prolog in \_\_\_\_\_\_
 
 \end{description}
 
-\subsection{Implementations}
+\section{Implementations}
 \begin{enumerate}
 \item Castor : Logic paradigm for C++, \cite{castorc++}
 \item GNU Prolog for Java, \cite{gnuprolog}
@@ -46,13 +46,13 @@ Prolog in \_\_\_\_\_\_
 \item Racklog, \cite{racklog}
 \end{enumerate}
 
-\subsection{Important People}
+\section{Important People}
 \begin{enumerate}
 \item ???
 \end{enumerate}
 
 
-\subsection{Miscellaneous / Possibly Related Content}
+\section{Miscellaneous / Possibly Related Content}
 \begin{enumerate}
 \item ???
 \end{enumerate}
