--- a/prologinhaskell.tex
+++ b/prologinhaskell.tex
@@ -6,11 +6,11 @@
 
 
 %----------------------------------------------------------------------------
-\section{Prolog in Haskell}\label{sect:prologinhaskell}
+\chapter{Prolog in Haskell}\label{chap:prologinhaskell}
 %----------------------------------------------------------------------------
 
 Prolog in Haskell
-\subsection{Theory}
+\section{Theory}
 
 \begin{description}
 \item[$\bullet$] Papers
@@ -68,7 +68,7 @@ Prolog in Haskell
 \end{description}
 
 
-\subsection{Implementations}
+\section{Implementations}
 \begin{enumerate}
 \item A Prolog in Haskell, Takashi's Workplace, \cite{website:takashi-workplace}
 
@@ -88,13 +88,13 @@ Prolog in Haskell
 
 \end{enumerate}
 
-\subsection{Important People}
+\section{Important People}
 \begin{enumerate}
 \item Mike Spivey 
 \item Silvija Seres
 \end{enumerate}
 
-\subsection{Miscellaneous / Possibly Related Content}
+\section{Miscellaneous / Possibly Related Content}
 \begin{enumerate}
 \item Unification Libraries
 \begin{enumerate}
