--- a/relatedtermskeywords.tex
+++ b/relatedtermskeywords.tex
@@ -5,7 +5,7 @@
 \begin{document}
 
 % ---------------------------------------------------------------------------
-\section{Related Terms or Keywords}\label{sect:relatedtermskeywords}
+\chapter{Related Terms or Keywords}\label{chap:relatedtermskeywords}
 % ---------------------------------------------------------------------------
 
 Related Terms / Keywords
