--- a/toDo.tex
+++ b/toDo.tex
@@ -9,7 +9,7 @@
 \begin{scope}
 \nolinenumbers
 % ---------------------------------------------------------------------------
-\section{Editing to do}\label{sect:to-do}
+\chapter{Editing to do}\label{chap:to-do}
 % ---------------------------------------------------------------------------
 
 \textit{\color{red} This Chapter needs to be removed from the final
@@ -95,7 +95,7 @@
 
 \end{enumerate}
 
-\subsection{Editing suggestions from David}\label{sec:edit-sugg-david}
+\section{Editing suggestions from David}\label{sec:edit-sugg-david}
 
 \paragraph{Thoughts on 1.1}
 
