--- a/quasiquotation.tex
+++ b/quasiquotation.tex
@@ -4,10 +4,10 @@
 \begin{document}
 
 % ---------------------------------------------------------------------------
-\section{Quasiquotation}\label{sect:quasiquotation}
+\chapter{Quasiquotation}\label{chap:quasiquotation}
 % ---------------------------------------------------------------------------
 
-\subsection{Theory}
+\section{Theory}
 \begin{enumerate}
 
 \item Papers
@@ -34,12 +34,12 @@
 \end{enumerate}
 
 
-\subsection{Implementations}
+\section{Implementations}
 \begin{enumerate}
 \item
 \end{enumerate}
 
-\subsection{Miscellaneous / Possibly Related Content}
+\section{Miscellaneous / Possibly Related Content}
 \begin{enumerate}
 \item
 \end{enumerate}
